# v4l2_usb_for_luckfox_pico_mini

./: .gitignore  CMakeLists.txt  README.md  README_DEPLOYMENT.md  build.sh  v4l2_bench.c
source/: test_multiplanar.c  v4l2_usb.c
source_all_platform/: CMakeLists.txt  build_all_platforms.sh  create_release.sh  v4l2_usb_pc.h  v4l2_usb_pc_core.c  v4l2_usb_pc_main.c  verify_unpacked.py
source_embedded/: v4l2_usb.c
source_linux/: README.md  v4l2_usb_pc.c
source_linux_armv7l/: CMakeLists.txt  create_release.sh  v4l2_bench_mp.c  v4l2_usb.c
source_linux_x86_64/: Makefile  README.md  v4l2_usb_pc.c
source_pc/: README_USB_STREAMING.md  v4l2_usb_pc.c
source_python_gui/: main.py  requirements.txt  test_client.py
source_win/: Makefile.win  README_WINDOWS.md  build_windows.bat  v4l2_usb_pc_win.c
source_win_x86_64/: Makefile  Makefile.win  README.md  build_all_platforms.sh  v4l2_usb_pc.c
